
syntax = "proto3";

import "messages.proto";

option java_multiple_files = true;
option java_package = "io.sandstorm.exchange.api";
option java_outer_classname = "ControllerServiceProto";

service ControllerService {

    rpc RegisterLoadInjector(LoadInjectorMsg) returns (ResultMsg) {}

    rpc OnPreparationSucceeded(JobIdMsg) returns (ResultMsg) {}

    rpc OnPreparationFailed(ResultNotifyMsg) returns (ResultMsg) {}

    rpc OnJobCompleted(JobIdMsg) returns (ResultMsg) {}

    rpc OnJobFailed(ResultNotifyMsg) returns (ResultMsg) {}

}


